[package]
name = "patchpack"
version = "0.1.0"
edition = "2021"
authors = ["Jack <DevJackMC@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bsdiff = "0.1.6"
liblzma = {version="0.3.0", features=["static"]}
qbsdiff = "1.4.1"
tar = "0.4.40"


#Benchmarks
criterion = { version = "0.5.1", features = ["html_reports"] }


[[bench]]
name="compressed"
