[package]
name = "patchpack"
version = "0.1.0"
edition = "2021"
authors = ["Jack <DevJackMC@gmail.com>"]



include = [
    "**/*.rs",
    "Cargo.toml",
]


[dependencies]
bsdiff = "0.1.6"
liblzma = {version="0.3.0", features=["static"]}
qbsdiff = "1.4.1"
tar = "0.4.40"





#Benchmarks
criterion = { version = "0.5.1", features = ["html_reports"] }
rayon = "1.10.0"
walkdir = "2.5.0"

log = {version = "0.4.21", optional = true}
log-derive = {version = "0.4.1", optional = true}

[features]
logerrors = ["log-derive", "log"]


[[bench]]
name="compressed"
